--- a/RestApi/templates/data.html
+++ b/RestApi/templates/data.html
@@ -19,13 +19,25 @@
           left: 50%;
           transform: translate(-50%, -50%);
       }
-      h1{
-          font-weight: 400;
-      }
-      h1 {
-          font-size: 32px;
+      .h1{
+          position: absolute;
+          font-weight: 300;
+          font-size: 22px;
           color: #000000;
-          transform: translate(38%, 700%);
+          top: 30%;
+          left: 50%;
+          transform: translate(-50%, -50%);
+          font-family: Apple Chancery;
+      }
+      .time{
+          position: absolute;
+          font-weight: 400;
+          font-size: 22px;
+          color: #000000;
+          top: 10%;
+          left: 50%;
+          transform: translate(-50%, 270%);
+          font-family: cursive;
       }
 
       table {
@@ -77,7 +89,13 @@
 
   </head>
   <body>
-    <h1>Classification complete</h1>
+    <div class="h1">
+      <h1>Classification complete</h1>
+    </div>
+    <div class="container">
+    <div class="time">
+      <nobr>Time to extraction = {{form_data[3]}} s</nobr>
+    </div>
     <div class="container">
 	  <table>
 		  <thead>
