--- a/RestApi/templates/form.html
+++ b/RestApi/templates/form.html
@@ -4,7 +4,8 @@
     <title>Semantic label extraction</title>
     <link href='https://fonts.googleapis.com/css?family=Open+Sans:400,300,300italic,400italic,600' rel='stylesheet' type='text/css'>
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700" rel="stylesheet">
-    <script src='http://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.js'></script>
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <script src='https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js'></script>
     <style>
       html, body {
       height: 100%;
@@ -16,9 +17,6 @@
       font-family: Roboto, Arial, sans-serif;
       font-size: 16px;
       color: #eee;
-      }
-      .button_loading {
-        background: {{url_for('static', filename='gif.jpg')}} no-repeat 50% 50%;
       }
       h1{
       font-weight: 400;
@@ -97,17 +95,18 @@
       input[type=radio]:checked + label:after {
       opacity: 1;
       }
-      button {
-      display: block;
-      width: 200px;
-      padding: 10px;
-      margin: 20px auto 0;
-      border: none;
-      border-radius: 5px;
-      background: #1c87c9;
-      font-size: 14px;
-      font-weight: 600;
-      color: #fff;
+      .button {
+        display: block;
+        width: 200px;
+        padding: 10px;
+        margin: 20px auto 0;
+        border: none;
+        border-radius: 5px;
+        background: #1c87c9;
+        font-size: 14px;
+        font-weight: 600;
+        color: #fff;
+        transition: all ease 1.5s;
       }
       button:hover {
       background: #095484;
@@ -127,12 +126,11 @@
       width: 48%;
       }
       }
+      
+      input:valid{
+        border: 1px solid #32CD32; 
+      }
     </style>
-    <script type="text/javascript">
-      $("#bt").click(function () {
-        $(this).addClass('button_loading');
-      });
-    </script>
   </head>
   <body>
     <div class="main-block">
@@ -141,11 +139,11 @@
 
       <form action="/data/" method = "POST">
         <div class="info">
-          <input class="fname" type="text" name="table" placeholder="Insert a table">
-          <input class="fname" type="text" name="column" placeholder="Choose a column">
-          <input class="fname" type="text" name="labels" placeholder="Choose your labels">
+          <input class="fname" type="text" name="table" placeholder="Insert a table" required>
+          <input class="fname" type="text" name="column" placeholder="Choose a column" required>
+          <input class="fname" type="text" name="labels" placeholder="Choose your labels" required>
         </div>
-        <button id = "bt" href="/" class="button">Find the label</button>
+        <button class="button">Find the label</button>
       </form>
     </div>
   </body>
