--- a/RestApi/templates/form.html
+++ b/RestApi/templates/form.html
@@ -171,9 +171,12 @@
 
       <form id="myform" action="/data/" method = "POST">
         <div class="info">
+          <input class="fname" type="text" name="db" placeholder="Choose your database" required>
           <input class="fname" type="text" name="table" placeholder="Insert a table" required>
           <input class="fname" type="text" name="column" placeholder="Choose a column" required>
           <input class="fname" type="text" name="labels" placeholder="Choose your labels" required>
+          <input class="fname" type="text" name="ip" placeholder="Server ip">
+          <input class="fname" type="text" name="port" placeholder="Port" required>
         </div>
         <button class="button" href="/">Find the label</button>
       </form>
