--- a/RestApi/templates/indNot.html
+++ b/RestApi/templates/indNot.html
@@ -100,7 +100,7 @@ svg {
 </svg>
 <div class="message-box">
   <h1>Index Error</h1>
-  <p>La tabella o la colonna che hai inserito non è corretta</p>
+  <p>Il nome del database, della tabella o della colonna non è corretto. </p>
   <div class="buttons-con">
     <div class="action-link-wrap">
       <a href="http://127.0.0.1:5000" class="link-button">Go to Home Page</a>
