--- a/RestApi/templates/form.html
+++ b/RestApi/templates/form.html
@@ -153,6 +153,34 @@
         left: 300px ;
         top: 100px;
       }
+
+      #pageloader h1
+      {
+        top: 70px;
+        font-weight: 700;
+        text-align: center;
+        font-size: 30px;
+        font-family: Hack, sans-serif;
+        text-transform: uppercase;
+        background: linear-gradient(90deg, #000, #fff, #000);
+        letter-spacing: 5px;
+        -webkit-background-clip: text;
+        background-clip: text;
+        -webkit-text-fill-color: transparent;
+        background-repeat: no-repeat;
+        background-size: 80%;
+        animation: shine 5s linear infinite;
+        position: relative;      
+      }
+
+      @keyframes shine {
+        0% {
+          background-position-x: -500%;
+        }
+        100% {
+          background-position-x: 500%;
+        }
+      }
     </style>
   </head>
   <body>
@@ -166,6 +194,7 @@
 
     <div id="pageloader">
       <img src="https://i.pinimg.com/originals/12/6c/a6/126ca6bcc2616e4edf09f466e9925396.gif" alt="processing..." />
+      <h1>Searching your best label...</h1>
     </div>
 
     <div class="main-block">
