--- a/RestApi/templates/data.html
+++ b/RestApi/templates/data.html
@@ -146,7 +146,7 @@
     </div>
     <div class="buttons-con">
       <div class="action-link-wrap">
-        <a href="http://127.0.0.1:5000" class="link-button">Extract a new label</a>
+        <a href="http://127.0.0.1:5000/form/" class="link-button">Extract a new label</a>
       </div>
     </div>
   </body>
