--- a/RestApi/templates/im.html
+++ b/RestApi/templates/im.html
@@ -84,7 +84,7 @@ div.text a:hover {
         <div class="text">
         <h1>Connection Error</h1>
         <h3>have you activate the ssh tunneling?</h3>
-        <a href="http://127.0.0.1:5000">back to the homepage</a>
+        <a href="http://127.0.0.1:5000/form/">back to the form page</a>
         </div>
     </section>
 </body>
