--- a/RestApi/templates/indNot.html
+++ b/RestApi/templates/indNot.html
@@ -103,7 +103,7 @@ svg {
   <p>Il nome del database, della tabella o della colonna non è corretto. </p>
   <div class="buttons-con">
     <div class="action-link-wrap">
-      <a href="http://127.0.0.1:5000" class="link-button">Go to Home Page</a>
+      <a href="http://127.0.0.1:5000/form/" class="link-button">Go to Form Page</a>
     </div>
   </div>
 </div>
